SatisfactoryProductionator/Pages/Codex.razor.css
div.panel-wrapper {
    top: 14px;
    left: 275px;
    right: 14px;
    bottom: 14px;
    --aug-border-all: 3px;
    --aug-border-bg: var(--sfBlue);
    --aug-tl: 15px;
    --aug-tr: 33px;
    --aug-br: 33px;
    --aug-bl: 20px;
}

.main-panel {
    margin-right: 16px;
    top: 27px;
    left: 20px;
    height: 100%;
    overflow: scroll;
    overflow-y: auto;
}

    .main-panel::-webkit-scrollbar {
        width: 1em;
    }

    .main-panel::-webkit-scrollbar-track {
        background: var(--sfBlue40);
        border-radius: 16px;
        margin-block: 5em;
        margin-block-start: 5em;
    }

    .main-panel::-webkit-scrollbar-thumb {
        border-radius: 100vh;
        background: var(--sfBlue40);
    }

